VMC-317: Fixed issue with loading icon not showing while saving SNMP configuration

--- a/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
+++ b/src/frontend/org/voltdb/dbmonitor/css/resources/layout.css
@@ -4023,6 +4023,7 @@ ul#shutdownMsg li{ font-size:13px; line-height:20px; }
 
 /******************SNMP******************************/
 .snmpForm > form input[type="text"],.snmpFormSelect > form > select { width:156px;}
+.loadingSNMP { position:static;}
 
 
 
